--- a/theJackPack.sty
+++ b/theJackPack.sty
@@ -1,3 +1,5 @@
+%This file is no longer used. I use the general math packages and make everything work in the context of that%
+
 %indent & slash
 \usepackage{changepage} 
 \usepackage{ulem} 
